--- a/.docker/apache/000-default.conf
+++ b/.docker/apache/000-default.conf
@@ -2,29 +2,14 @@
     ServerAdmin migueltomas.informatica@iespacomolla.es
     DocumentRoot /var/www/html
 
-    # Restringir el acceso directo a los ficheros .php desde una ip que no sea local
-    <Files "*.php">
-      Require ip 127.0.0.1
-    </Files>
-
-    # Autorizar solamente el fichero index.php como punto de acceso a la aplicacion
-    <Files "index.php">
-      Require all granted
-    </Files>
-
-    # Activar el motor de reescritura de URL
-    RewriteEngine On
-
-    # Activar la cabecera de autorización si estamos utilizando PHP en modo CGI
-    RewriteCond %{HTTP:Authorization} ^(.)
-    RewriteRule . - [e=HTTP_AUTHORIZATION:%1]
-
-    # Control de redireccion.
-    # Cualquier petición de un fichero o directorio
-    # sera redireccionada a index.php
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^(.+)$ index.php [QSA,L]
+    <Directory "/var/www/html">
+    	<IfModule mod_rewrite.c>
+    		RewriteEngine On
+    		RewriteCond %{REQUEST_FILENAME} !-d
+    		RewriteCond %{REQUEST_FILENAME} !-f
+    		RewriteRule ^ /index.php [L]
+    	</IfModule>
+    </Directory>
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
